--- a/style.css
+++ b/style.css
@@ -77,7 +77,8 @@ body {
 .container {
   position: relative;
   z-index: 2;
-  height: 750px;
+  width: 100%;
+  height: 100%;
   overflow: hidden;
 }
 /* intro header section */
