--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body {
   align-items: center;
   min-height: 100vh;
 }
-
+/* font rules */
 .f1 {
   font-family: var(--f1);
   font-size: 1.5rem;
@@ -41,7 +41,7 @@ body {
 /* background grid + gradient */
 .background {
   position: relative;
-  width: 375px;
+  width: 385px;
   height: 750px;
   overflow: hidden;
 }
@@ -67,7 +67,7 @@ body {
   bottom: 0;
   left: 0;
   background-color: rgb(14, 14, 14);
-  background-size: 53.5px 53.5px;
+  background-size: 55px 55px;
   background-image: linear-gradient(
       to right,
       var(--off-white) 1px,
@@ -80,14 +80,14 @@ body {
   position: relative;
   z-index: 2;
   width: 100%;
-  height: 100%;
+  height: 750px;
   overflow: hidden;
 }
 .top-content {
   display: flex;
   flex-direction: column;
   position: relative;
-  top: 53.5px;
+  top: 55px;
   border: 0.5px solid var(--grey);
 }
 /* intro header section */
@@ -98,7 +98,7 @@ body {
   padding: 10px;
   gap: 20px;
   background-color: var(--black2);
-  height: 107.5px;
+  height: 110px;
   width: 100%;
 }
 .profile {
@@ -135,8 +135,8 @@ li {
   border-top: 0.5px solid var(--grey);
   border-right: 0.5px solid var(--grey);
   color: var(--grey);
-  width: 214px;
-  height: 53.5px;
+  width: 220px;
+  height: 55px;
 }
 li > svg {
   width: 25px;
@@ -150,8 +150,8 @@ li:hover {
   color: var(--orange);
 }
 video {
-  width: 160.5px;
-  height: 160.5px;
+  width: 165px;
+  height: 165px;
   background-color: var(--black2);
   border-top: 0.5px solid var(--grey);
 }
