--- a/style.css
+++ b/style.css
@@ -4,7 +4,10 @@
   padding: 0;
   box-sizing: border-box;
 }
-
+button {
+  background: none;
+  border: none;
+}
 :root {
   --orange: rgb(240, 101, 67);
   --yellow: rgb(240, 157, 81);
@@ -78,17 +81,18 @@ body {
 }
 /* general positioning */
 .container {
+  display: flex;
+  flex-direction: column;
   position: relative;
   z-index: 2;
   width: 100%;
   height: 750px;
   overflow: hidden;
 }
-.top-content {
+.main-container {
   display: flex;
   flex-direction: column;
-  position: relative;
-  top: 55px;
+  margin-top: 55px;
   border: 0.5px solid var(--grey);
 }
 /* intro header section */
@@ -155,4 +159,34 @@ video {
   height: 165px;
   background-color: var(--black2);
   border-top: 0.5px solid var(--grey);
+}
+/* settings button and animation */
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+.settings {
+  width: 55px;
+  height: 55px;
+  position: absolute;
+  right: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  fill: var(--grey);
+  cursor: pointer;
+}
+.settings > svg {
+  padding-left: 1.44px;
+  height: 25px;
+  width: 25px;
+}
+.settings:hover {
+  fill: var(--off-white);
+  transform-origin: center center;
+  animation: spin 1s ease;
 }
