--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ body {
 .background {
   position: relative;
   width: 385px;
-  height: 750px;
+  height: 700px;
   overflow: hidden;
 }
 .background::after {
@@ -86,7 +86,7 @@ body {
   position: relative;
   z-index: 2;
   width: 100%;
-  height: 750px;
+  height: 700px;
   overflow: hidden;
 }
 .main-container {
@@ -134,26 +134,24 @@ li {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 10px;
+  gap: 28px;
   cursor: pointer;
   background-color: var(--black2);
   border-top: 0.5px solid var(--grey);
   border-right: 0.5px solid var(--grey);
-  color: var(--grey);
+  color: var(--orange);
   width: 220px;
   height: 55px;
+  text-decoration: underline;
 }
 li > svg {
   width: 25px;
   height: 25px;
-  fill: var(--grey);
-}
-/* li:hover > svg {
   fill: var(--orange);
 }
 li:hover {
-  color: var(--orange);
-} */
+  border: 1px solid var(--orange);
+}
 video {
   width: 163px;
   height: 165px;
@@ -195,7 +193,7 @@ video {
   width: 274px;
   height: 330px;
   background-color: var(--black2);
-  margin: 54px 0 0 56px;
+  margin: 0 0 0 56px;
   padding: 12px;
   border: 3px solid transparent;
   font-size: 0.75rem;
