--- a/style.css
+++ b/style.css
@@ -34,12 +34,13 @@ body {
 /* font rules */
 .f1 {
   font-family: var(--f1);
-  font-size: 1.5rem;
+  font-size: 1.25rem;
   font-weight: 700;
 }
 .f2 {
   font-family: var(--f2);
   color: var(--grey);
+  font-size: 0.9rem;
 }
 /* background grid + gradient */
 .background {
@@ -100,8 +101,8 @@ body {
   display: flex;
   justify-content: start;
   align-items: center;
-  padding: 10px;
-  gap: 20px;
+  padding: 18px;
+  gap: 40px;
   background-color: var(--black2);
   height: 110px;
   width: 100%;
@@ -111,14 +112,16 @@ body {
   justify-content: center;
   align-items: center;
   gap: 20px;
+  overflow: hidden;
+  border: 2px solid var(--orange);
+  border-radius: 100%;
 }
-.header-home h1,
-.header-home h4 {
-  margin-top: 12px;
+.header-home h1 {
+  margin-top: 10px;
 }
 .profile > img {
-  width: 75px;
-  height: 75px;
+  width: 60px;
+  height: 60px;
 }
 /* nav section */
 .navigation {
@@ -134,7 +137,7 @@ li {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 28px;
+  gap: 32px;
   cursor: pointer;
   background-color: var(--black2);
   border-top: 0.5px solid var(--grey);
@@ -142,11 +145,11 @@ li {
   color: var(--orange);
   width: 220px;
   height: 55px;
-  text-decoration: underline;
+  font-size: 0.85rem;
 }
 li > svg {
-  width: 25px;
-  height: 25px;
+  width: 20px;
+  height: 20px;
   fill: var(--orange);
 }
 li:hover {
@@ -210,6 +213,7 @@ video {
   color: var(--black2);
   width: 100%;
   height: 40px;
+  font-size: 0.85rem;
   border-radius: 0.5rem;
   cursor: pointer;
 }
