--- a/style.css
+++ b/style.css
@@ -182,6 +182,7 @@ body {
     transform: rotate(360deg);
   }
 }
+.back,
 .settings {
   width: 55px;
   height: 55px;
@@ -193,10 +194,17 @@ body {
   fill: var(--grey);
   cursor: pointer;
 }
+.back {
+  left: 0;
+}
+.back > svg,
 .settings > svg {
   padding-left: 1.44px;
   height: 25px;
   width: 25px;
+}
+.back:hover {
+  fill: var(--off-white);
 }
 .settings:hover {
   fill: var(--off-white);
@@ -234,3 +242,14 @@ body {
 /* #home {
   display: none;
 } */
+.title {
+  text-align: center;
+  padding-top: 14px;
+  background-color: var(--black2);
+  width: 165px;
+  height: 55px;
+  border-top: 1px solid var(--grey);
+  border-left: 1px solid var(--grey);
+  position: absolute;
+  margin-left: 110px;
+}
