--- a/style.css
+++ b/style.css
@@ -49,8 +49,7 @@ body {
 .background {
   position: relative;
   width: 385px;
-  height: 750px;
-  overflow: hidden;
+  min-height: 650px;
 }
 .background::after {
   content: '';
@@ -90,8 +89,8 @@ body {
   position: relative;
   z-index: 2;
   width: 100%;
-  height: 750px;
-  overflow: hidden;
+  margin-bottom: 100px;
+  min-height: 650px;
 }
 .main-container {
   display: flex;
@@ -239,9 +238,11 @@ body {
   cursor: pointer;
 }
 /* toggle pages */
+.myCache,
 .myHome {
   display: none;
 }
+/* changing title */
 .title {
   text-align: center;
   padding-top: 14px;
@@ -261,7 +262,6 @@ body {
   top: 54px;
   left: 56px;
   overflow: hidden;
-  border: 1px solid saddlebrown;
 }
 .controls {
   display: flex;
@@ -289,6 +289,26 @@ body {
   fill: var(--off-white);
   cursor: pointer;
 }
-.shelves {
+.books {
   width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  justify-items: center;
+  padding: 28px 14px;
+  row-gap: 14px;
+}
+.book {
+  padding: 2px;
+  width: 90px;
+  height: 125px;
+  border: 3px solid var(--orange);
+  text-align: center;
+  cursor: pointer;
+  word-wrap: break-word;
+  font-size: 0.6rem;
+}
+.book:hover {
+  border: 3px solid var(--yellow);
+  color: var(--off-white);
+  transform: scale(1.1);
 }
