--- a/style.css
+++ b/style.css
@@ -144,6 +144,9 @@ body {
   height: 40px;
   cursor: pointer;
 }
+.navigation span::before {
+  content: 'my';
+}
 .navigation nav {
   font-size: 1rem;
   display: flex;
@@ -210,36 +213,26 @@ body {
   transform-origin: center center;
   animation: spin 1s ease;
 }
-/* recent section */
-.recent {
+/* when no items are in myCache */
+.myStats {
   width: 274px;
-  height: 340px;
+  height: 273px;
   background-color: var(--black2);
-  margin: 55px 0 0 56px;
+  margin: 54px 0 0 56px;
   padding: 12px;
-  border: 3px solid transparent;
   font-size: 0.75rem;
 }
-.recent > img {
+.myStats img {
   padding: 25px 50px;
   width: 100%;
 }
-.recent > p {
+.myStats p {
   margin-top: 8px;
   font-size: 0.75rem;
 }
-.recent > button {
-  background-color: var(--orange);
-  color: var(--black2);
-  width: 100%;
-  height: 40px;
-  font-size: 0.85rem;
-  border-radius: 0.5rem;
-  cursor: pointer;
-}
+
 /* toggle pages */
-.myCache,
-.myHome {
+.myCache {
   display: none;
 }
 /* changing title */
