--- a/style.css
+++ b/style.css
@@ -133,6 +133,7 @@ body {
   width: 100%;
   height: 110px;
 }
+form > button,
 .navigation li {
   background-color: var(--orange);
   display: flex;
@@ -234,6 +235,7 @@ body {
 }
 
 /* toggle pages */
+.form-off,
 .home-off,
 .cache-off {
   display: none;
@@ -298,7 +300,6 @@ body {
 .cache svg {
   fill: var(--off-white);
 }
-
 .books {
   width: 100%;
   display: grid;
@@ -321,4 +322,34 @@ body {
   border: 3px solid var(--yellow);
   color: var(--off-white);
   transform: scale(1.1);
+}
+form {
+  position: absolute;
+  padding: 12px;
+  background-color: var(--black2);
+  height: 385px;
+  width: 275px;
+  z-index: 10;
+  border: 1px solid var(--grey);
+  left: 56px;
+  top: 110px;
+}
+form > button {
+  width: 100%;
+  margin-top: 12px;
+  font-family: var(--f2), monospace;
+}
+input {
+  font-family: monospace;
+  background-color: var(--black2);
+  color: var(--off-white);
+  height: 40px;
+  padding: 4px;
+  margin: 4px 0 8px 0;
+  width: 100%;
+  border: 1px solid var(--orange);
+  border-radius: 0.5rem;
+}
+.notice {
+  border-bottom: 1px solid var(--black);
 }
